[package]
name = "ivy-keygen"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
rouille = "3.6.2"
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solana-pubkey = { version = "2.4.0", features = ["curve25519"] }
